# image-downloader

./: Cargo.toml  README.md
.github/workflows/: release.yml
example/: README.md  test.html
example/src/: anotherFile.html  test.js
src/: files.rs  images.rs  main.rs  prompts.rs
