[package]
name = "image-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
console = "0.15.5"
dialoguer = "0.10.3"
hyper = {version = "0.14", features = ["full"]}
indicatif = "0.17.3"
regex = "1.7.1"
hyper-tls = "0.5.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.27"
tokio-util = { version = "0.7.7", features = ["compat"] }

[dependencies.async-std]
version = "1.6"
features = ["attributes"]

[profile.release]
panic = "abort"
